# fenix

./: .gitignore  Cargo.toml  Makefile  i686-unknown-fenix.json  linker.ld
arch/i686/: Cargo.toml
arch/i686/src/: io.rs  lib.rs
arch/i686/src/device/: serial.rs
common/: Cargo.toml
common/src/: lib.rs
iso/boot/grub/: grub.cfg
src/: arch.rs  fenix.rs  io.rs  log.rs  macros.rs  settings.rs
src/device/: console.rs  mod.rs  serial.rs
src/dtable/: idt.rs  mod.rs
src/interrupt/: mod.rs
src/output/: console.rs  mod.rs
