[package]
name = "fenix"
version = "0.1.0"
authors = ["José Miguel Sánchez García <jmi2k@openmailbox.org>"]

[dependencies]
rlibc = "1.0"
multiboot2 = "0.3"

[dependencies.common]
path = "./common"

[target.'cfg(target_arch = "x86")'.dependencies.arch_i686]
path = "./arch/i686"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
