[package]
name = "fenix"
version = "0.1.0"
authors = ["José Miguel Sánchez García <jmi2k@openmailbox.org>"]

[dependencies]
bitflags = "0.8"
rlibc = "1.0"
spin = "0.4"

[dependencies.multiboot2]
path = "../multiboot2-elf64"
features = ["elf32"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
